# Weekly-Fetch

./: .gitignore  CLAUDE.md  README.md  accounts.json  app.py  architectural-decisions.md  bash.exe.stackdump  build.ps1  conftest.py  install.py  last_fetch.json  last_monthly.json  main.py  pyproject.toml  run.ps1  settings.json  sources-designs.html  todo.txt  weekly.txt
.claude/: settings.local.json
.github/workflows/: release.yml
.superpowers/brainstorm/261-1773253022/: .server-info  accent-vibrancy.html  full-ui-mockup-v2.html  full-ui-mockup.html  palette-approaches.html  palette-direction.html
data/: digests.db
docs/superpowers/plans/: 2026-03-12-purple-dusk-palette.md
docs/superpowers/specs/: 2026-03-12-palette-design.md
input/: monthly.txt
output/: MachineLearning_2026-W05.html  programming_2026-W05.html  python_2026-W05.html
src/: config.py  db.py  digest.css  digest.js  dwm.py  fetch.py  fetch_bluesky.py  fetch_instagram.py  last_monthly.json  log.py  main.py  notify.py  render.py  schedule.py  server.py
src/fetch/: base.py  bluesky.py  instagram.py  mastodon.py  reddit.py  tumblr.py  twitter.py
tests/: test_db.py  test_schedule.py  test_threshold.py
ui/: app.js  digest.css  digest.js  forms.css  index.html  pages.css  shell.css  tokens.css  viewer.css
